# The-Smart-Pot

Arduino-code/: Device.h  FoodPump.cpp  FoodPump.h  Sensor.h  WaterPump.cpp  WaterPump.h  sketch_sep13a.ino  static_config.h
Arduino-code/sketch_sep13a/: Device.cpp  Device.h  FoodPump.cpp  FoodPump.h  H2OSensor.cpp  H2OSensor.h  PPMSensor.cpp  PPMSensor.h  Sensor.h  WaterPump.cpp  WaterPump.h  grow_pot.cpp  grow_pot.h  sketch_sep13a.ino  static_config.h
RPi-Control/: Cargo.toml
RPi-Control/src/: main.rs
RPi-Control/src/arduino_interf/: arduino_interf.rs  mod.rs
RPi-Control/src/server/: server.rs
rpi-py/: server.py  smartpot_control.py
