[package]
name = "RPi-Control"
version = "0.1.0"
authors = ["CD10H <simas.briedis@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
serde  = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serialport = "3.0.0"